--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <div class="adfit" id='id_adfit'>
       <ins class="kakao_ad_area" style="display:none;" 
-        data-ad-unit    = "DAN-jlYGFab44o8zjZ7s" 
+        data-ad-unit    = "DAN-c6tc4lPiNO7A3BHj" 
         data-ad-width   = "320" 
         data-ad-height  = "50"></ins> 
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
@@ -101,7 +101,7 @@
     <br>
     <div class="adfit" id='id_adfit'>
       <ins class="kakao_ad_area" style="display:none;" 
-        data-ad-unit    = "DAN-edQe8MuXyEeFD479" 
+        data-ad-unit    = "DAN-ZS3NR3cXnEnkaf7N" 
         data-ad-width   = "320" 
         data-ad-height  = "100"></ins> 
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
