--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <div class="adfit" id='id_adfit'>
       <ins class="kakao_ad_area" style="display:none;" 
-        data-ad-unit    = "DAN-c6tc4lPiNO7A3BHj" 
+        data-ad-unit    = "DAN-5YMS6CMoyuufK6YF" 
         data-ad-width   = "320" 
         data-ad-height  = "50"></ins> 
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
@@ -89,7 +89,8 @@
 
     <hr>
     <p class="game-explanation">
-      <strong class="important">하는 법:</strong> 타일을 움직여서 합치세요.
+      <strong class="important">하는 법:</strong> 타일을 움직여서 합치세요. <br>
+      <strong class="important">다른 버전 보러가기:</strong> <a href="https://jjisu89.github.io/">링크</a>
     </p>
     <!-- <hr>
     <p>
@@ -101,7 +102,7 @@
     <br>
     <div class="adfit" id='id_adfit'>
       <ins class="kakao_ad_area" style="display:none;" 
-        data-ad-unit    = "DAN-ZS3NR3cXnEnkaf7N" 
+        data-ad-unit    = "DAN-kCCEIHiIqLL1GM6q" 
         data-ad-width   = "320" 
         data-ad-height  = "100"></ins> 
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
