--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="above-game">
       <p class="game-intro">윤하 ver.</p>
       <a class="restart-button">새 게임</a>
+      <a class="change-caption-button">문구 변경</a>
     </div>
 
     <div class="game-container">
