--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
       </div>
     </div>
 
+    <div class="above-above-game">
+      <a class="change-caption-button">문구 변경</a>
+    </div>
+
     <div class="above-game">
       <p class="game-intro">윤하 ver.</p>
       <a class="restart-button">새 게임</a>
-      <a class="change-caption-button">문구 변경</a>
     </div>
 
     <div class="game-container">
