no caption change

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <div class="best-container">0</div>
       </div>
     </div>
-
+<!-- 
     <div class="above-above-game">
       <a class="change-caption-button">문구 변경</a>
-    </div>
+    </div> -->
 
     <div class="above-game">
       <p class="game-intro">윤하 ver.</p>
