--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <div class="adfit" id='id_adfit'>
       <ins class="kakao_ad_area" style="display:none;" 
-        data-ad-unit    = "DAN-5YMS6CMoyuufK6YF" 
+        data-ad-unit    = "DAN-R41ygBFBcRdWKHlx" 
         data-ad-width   = "320" 
         data-ad-height  = "50"></ins> 
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
@@ -106,7 +106,7 @@
     <br>
     <div class="adfit" id='id_adfit'>
       <ins class="kakao_ad_area" style="display:none;" 
-        data-ad-unit    = "DAN-kCCEIHiIqLL1GM6q" 
+        data-ad-unit    = "DAN-HlpjENylL1jvj3KR" 
         data-ad-width   = "320" 
         data-ad-height  = "100"></ins> 
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
