--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
     <hr>
     <p class="game-explanation">
       <strong class="important">하는 법:</strong> 타일을 움직여서 합치세요. <br>
-      <strong class="important">다른 버전 보러가기:</strong> <a href="https://jjisu89.github.io/">링크</a>
+      <strong class="important">다른 버전 보러가기:</strong> <a href="https://jjisu89.github.io/" target="_blank">링크</a>
     </p>
     <!-- <hr>
     <p>
     <strong class="important">Note:</strong> This site is not the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
     </p> -->
-    <p>
+    <!-- <p>
     Modified by some 홀릭스. Originally Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> 
-    </p>
+    </p> -->
     <br>
     <div class="adfit" id='id_adfit'>
       <ins class="kakao_ad_area" style="display:none;" 
